# telegram-to-notion

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example.py
telegram_to_notion/: __init__.py  __main__.py  bot.py  config.py  models.py  notion.py  openrouter.py  pipeline.py  transcribe.py
telegram_to_notion/adapters/: telegram.py
telegram_to_notion/llm/: __init__.py  openrouter.py  prompt.py  source_hints.py
telegram_to_notion/media/: __init__.py  animation.py  base.py  document.py  img.py  transcribe_voice.py  video.py  voice.py
tests/: test_config.py  test_models.py  test_notion.py
tests/data/: audio_example_transcript.txt
tests/integration/: __init__.py  test_notion_live.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_notion.py  test_openrouter.py  test_pipeline.py  test_prompt.py  test_source_hints.py  test_transcribe.py
