[project]
name = "telegram-to-notion"
version = "0.1.0"
description = "Self-hosted Telegram → Notion bridge via long polling"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "notion-client>=2.2.1",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pylint>=4.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["telegram_to_notion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: uses real external APIs (requires repo .env)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
