[project]
name = "telegram-to-notion"
dynamic = ["version"]
description = "Self-hosted Telegram → Notion bridge via long polling"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "notion-client>=2.2.1",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "faster-whisper>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pylint>=4.0.5",
    "ipykernel>=7.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["telegram_to_notion"]

# Version comes from the latest git tag (e.g. `v0.3.0` → `0.3.0`).
# Between tags hatch-vcs emits a PEP 440 post-release string.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "telegram_to_notion/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: uses real external APIs (requires repo .env)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "faster_whisper"
ignore_missing_imports = true
